--- a/src/server/client/lista_exames.css
+++ b/src/server/client/lista_exames.css
@@ -51,6 +51,10 @@ main {
   justify-content: space-between;
 }
 
+img:hover {
+  cursor: pointer;
+}
+
 h3 {
   font-size: 2.4rem;
 }
@@ -65,7 +69,7 @@ button {
   color: white;
 }
 
-button:hover {
+.imgBox:hover {
   filter: brightness(0.85);
   cursor: pointer;
 }
